优化对于CacheBean的获取方式